# large-content-streaming-perf-benchmarking

./: .gitignore  Cargo.toml  README.md  run_benchmark.sh
results/100mib_upload_test/: benchmark_report.md  benchmark_results.csv  benchmark_results.json  per_request_results.csv
src/: client.rs  config.rs  lib.rs  metrics.rs  report.rs  server.rs
