[package]
name = "streaming_bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
hdrhistogram = "7"
sysinfo = "0.31"
tokio-stream = "0.1"
futures = "0.3"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
csv = "1"
hex = "0.4"
rayon = "1"
async-stream = "0.3"
